
  --------------------------  HepMC-2.01.03  --------------------------

2007-07-11  Lynn Garren

	* src/IO*.cc: write HepMC version number

  --------------------------  HepMC-2.01.02  --------------------------

2007-07-10  Lynn Garren

	* HepMC/Version.h: add the ability to print the HepMC version number
	* src/IO_ExtendedAscii.cc: write HepMC version number

2007-07-09  Lynn Garren

	* src/IO_ExtendedAscii.cc: read/write beam particle information
	  fix a problem with reading optional info
	* test/testMass.*: compare generated and calculated masses

2007-06-29  Lynn Garren

	* HepMC/GenEvent.h, src/GenEvent.cc: define beam process methods
	   bool valid_beam_particles() const;
	   std::pair<GenParticle*,GenParticle*> beam_particles() const;
	   bool set_beam_particles(GenParticle*, GenParticle*);
	   bool set_beam_particles(std::pair<GenParticle*,GenParticle*> const &);

	* fio/IO_HEPEVT.cc, fio/IO_HERWIG.cc: set incoming beam particles

	* HepMC/PythiaWrapper*: remove old process struct

2007-06-21  Lynn Garren

	* HepMC/GenEvent.h: add methods to set and access the number of 
	  multi particle interactions in the event.  
	  The default value of this number is -1.
	* src/IO_ExtendedAscii.cc: read and write MPI information

2007-06-19  Lynn Garren

	* HepMC/GenParticle.h: use uint64_t for the serial number counter

  --------------------------  HepMC-2.01.00  --------------------------

2007-06-08  Lynn Garren

	* HepMC/GenEvent.h, src/GenEvent.cc: add clear() method

	* HepMC/GenParticleComparison.h:
	  define a GenParticle comparator
	* HepMC/GenParticle.h, src/GenParticle.cc:
	  set a serial number to be used by GenParticleComparison
	* HepMC/Flow.h, HepMC/GenVertex.h, src/Flow.cc, src/GenVertex.cc:
	  use std::set<GenParticle*,GenParticleComparison>
	* test: automatic comparison of output files is now possible

  --------------------------  HepMC-2.00.04  --------------------------

2007-06-01  Lynn Garren
